Corrige exibição do logotipo e ajusta layout

--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
   <div class="min-h-screen flex">
     <!-- Sidebar -->
     <aside class="w-64 p-4 border-r border-gray-200 bg-white">
-      <!-- ✅ NOVO LOGO LOCAL -->
-      <img src="logo_estudio_limoli.jpg" alt="Logo Estúdio Limoli" class="rounded-full w-16 h-16 mb-3 shadow-md">
+      <!-- Logo ajustado: fundo branco, padding e object-contain para não cortar -->
+      <img src="logo_estudio_limoli.jpg"
+           alt="Logo Estúdio Limoli"
+           class="rounded-full w-20 h-20 object-contain mb-3 shadow-md bg-white p-1 border border-gray-200" />
       <h2 class="text-lg font-bold">Escola de Desenho</h2>
       <p class="text-sm text-gray-600 mb-4">Painel de performance</p>
       <nav class="flex flex-col gap-2 text-sm">
